trustfall_core/test_data/tests/valid_queries/filter_in_fold_using_external_tag.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Two {
        name @tag

        multiple(max: 3) @fold {
            name @filter(op: "<", value: ["%name"])
            value @output
        }
    }
}"#,
    arguments: {},
)
