trustfall_core/test_data/tests/parse_errors/invalid_fold_transform_op.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Two {
        multiple(max: 3) @fold @transform(op: "non_existent") @output {
            value @output
        }
    }
}"#,
    arguments: {},
)
